コード整理と修正。